@@ -1,11 +1,11 @@
 {
-  "count": 5684,
+  "count": 5658,
   "uniques": 39,
   "clones": [
     {
       "timestamp": "2022-10-01T00:00:00Z",
-      "count": 213,
-      "uniques": 2
+      "count": 66,
+      "uniques": 1
     },
     {
       "timestamp": "2022-10-02T00:00:00Z",
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2022-10-15T00:00:00Z",
-      "count": 138,
+      "count": 259,
       "uniques": 2
     }
   ]
