@@ -1,3 +1,11 @@
+2022-10-15T16:08:09Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3256316387 # 532
+* notice: last 14d: unq all: 39 5658
+* notice: prev accum: outdated-unq outdated-all / unq all: 1106 72238 / 1172 77922
+* notice: next accum: outdated-unq outdated-all / unq all: 1106 72238 / 1171 77896
+* notice: prev exec diff / last date diff / accum: unq all: +0 +121 -1 -147 / +2 +259 -0 -0 / 2 259
+* notice: removed / changed dates: [] / [2022-10-01 2022-10-15]
+
 2022-10-15T08:08:42Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3254961428 # 531
 * notice: last 14d: unq all: 39 5684
